location-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: location-service
  template:
    metadata:
      labels:
        app: location-service
    spec:
      containers:
      - name: location-service
        image: sohan101/location-service:1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: location-service
spec:
  selector:
    app: location-service
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
