ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /weather
            pathType: Prefix
            backend:
              service:
                name: weather-service
                port:
                  number: 4000
          - path: /location
            pathType: Prefix
            backend:
              service:
                name: location-service
                port:
                  number: 3000
